--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "smettboi-themes",
   "displayName": "smettboi-themes",
   "description": "",
-  "version": "1.0.0",
+  "version": "1.1.0",
+  "publisher": "smettboi",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zaneadix/smettboi-themes"
+  },
   "engines": {
     "vscode": "^1.75.0"
   },
